 - API: New CStationContainerHistoryRewriter tries to ensure that a CDockable stays on the same CStationContainer as long as possible.
 - Bugfix: A removed MultipleCDockable did not forget its unique identifier, when adding it again this caused an exception if another dockable got that unique id.
 - Bugfix: The location of a removed CDockable could be forgotten even if CControl.shoudStore returned true.

[v1.1.1p6]
 - API: New GlobalMouseDispatcher collects and distributes MouseEvents. Can be used by clients to listen to events.
 ! API: The "check" methods of MouseFocusObserver have been removed
 ! API: Creating a DockableDisplayer now requires the use of a DisplayerRequest. Instead of just one possibility to replace the factory creating DockableDisplayers, clients and extensions have now several possiblities, e.g. directly in a Dockable or in a DockStation
 ! API: During a drag and drop operation a DockStation now appears to consist of many layers instead of only one layer. This allows more complex rules to find the target of a drop operation. The new layers are described by the interface "DockStationDropLevel", the concept of the "override zone" has been completely replaced by this new layer mechanism.
 - Bugfix: SplitDockStation did ignore the DockAcceptance in certain situations
 - Bugfix: VetoableDockRelocatorListener.searched is now actually called
 
[Todo]
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.
- SingleParentRemover: Implement bugfix as described in the file